HOTFIX: Move flock search logic from details DAO to flock DAO
The general search logic for flocks was moved from ReadFlockDetails.java to ReadFlock.java, consolidating all flock search functionality in one place. Associated tests were updated to reflect this change, and redundant code was removed from ReadFlockDetails.java. Also, the database wipe flag in App.kt was set to false for safety.

original contributor: @jazjimenez

Co-Authored-By: Jaztin Jimenez <170294921+jazjimenez@users.noreply.github.com>